src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail23.jova
class Test{
public int test1;
private int test2;
private Test test3;
}

class Test2{
public int test1;
private int test2;
private Test test3;
}